--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.10",
     "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7",
     "socket.io": "^4.1.2"
